--- a/src/main/webapp/demo/dom.html
+++ b/src/main/webapp/demo/dom.html
@@ -1,14 +1,15 @@
 <!doctype html>
-<html>
+
+<html lang="en">
     <head>
 
         <title>Graph</title>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<!--        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
               integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link href="//fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+<!--        <link href="//fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">-->
         <link rel="stylesheet" href="../css/jsplumbtoolkit-defaults.css">
         <link rel="stylesheet" href="../css/main_jsplumb.css">
         <link rel="stylesheet" href="../css/jsplumbtoolkit-demo.css">
@@ -18,15 +19,16 @@
     <body data-demo-id="flowchart">
 
     <div class="page-header text-center">
-        <h1>CLDIFF GUI</h1>
+        <h1>CLDiff Graph</h1>
     </div>
-
+<div>
     <div class="dropdown">
         <div class="btn-group">
         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Commit <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" id="dropdown-menu">
+            <li><a href="#">data1.json</a></li>
             <li><a href="#">graph-rocketmq-37cf2a7cb706a0cfe5b217940467c4a9cb33626e.json</a></li>
             <li><a href="#">graph-rocketmq-3292d039ae882f42168d5f98969df83130ca05fb.json</a></li>
             <li><a href="#">graph-rocketmq-85467dfd34d8ff379d2ddfec0489d78dcba20c27.json</a></li>
@@ -42,16 +44,23 @@
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
         </ul>
+            <button type="button" class="btn btn-default" style="margin-left: 200vh" onclick="reset()">Reset</button>
     </div>
     </div>
+<!--    <div class="btn-group" role="group" aria-label="...">-->
+
+<!--    </div>-->
+</div>
+
     <div class="row">
 
-        <div class="container col-md-9 ">
-        <div class = "panzoom">
+        <div class="container  col-md-9 ">
+        <div class = "panzoom ">
 
-        <div class="jtk-demo-main " id="box">
+        <div class="jtk-demo-main zoomViewport " id="box">
+
 			<!-- demo -->
-            <div class="canvas-wide flowchart-demo jtk-surface  " id="canvas">
+            <div class="canvas-wide flowchart-demo jtk-surface zoomContainer " id="canvas">
 
             </div>
             <!-- /demo -->
@@ -59,32 +68,39 @@
         </div>
         </div>
         <div class="col-md-3">
-            <div id="chart">
-                <div class="page-header">
+
+                <div>
                     <h2>Code Info</h2>
+                    <h4>File path:</h4>
+                    <div id = "span" style="word-break: break-word"> </div>
                 </div>
 
-                <div id="rightEditor" style="height: 100vh"></div>
+                <div id="rightEditor" style="height: 70vh"></div>
             </div>
-        </div>
+
     </div>
 
 
     <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-    <script src="../js/jquery-ui-1.9.2-min.js"></script>
+    <script src="../js/jquery-ui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
+                                                                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+                                                                 crossorigin="anonymous"></script>
     <script src="../js/lodash.min.js"></script>
+    <script src="../js/jquery.zoomooz.min.js"></script>
+
     <script src="../js/dagre.min.js"></script>
     <script src="../js/jsPlumb.min.js"></script>
     <script src="../js/jquery.panzoom.min.js"></script>
+
     <script src="../node_modules/monaco-editor/dev/vs/loader.js"></script>
     <script src="./data1.js"></script>
-    <script src="init_node.js"></script>
-    <script src="demo.js"></script>
     <script src="panzoom.js"></script>
+
+    <script src="demo.js"></script>
+
     <script src="layout.js"></script>
+    <script src="init_node.js"></script>
     <script src="refresh.js"></script>
 
 
